add ResetPassword status
