# docs/swagger.json
@@ -291,7 +291,19 @@
                     "200": {
                         "description": "Return access token and refresh token",
                         "schema": {
-                            "$ref": "#/definitions/handlers.ResponseHTTP"
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/handlers.ResponseHTTP"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/handlers.LoginResponse"
+                                        }
+                                    }
+                                }
+                            ]
                         }
                     },
                     "503": {
@@ -4208,6 +4220,20 @@
                 }
             }
         },
+        "handlers.LoginResponse": {
+            "type": "object",
+            "properties": {
+                "access_token": {
+                    "type": "string"
+                },
+                "refresh_token": {
+                    "type": "string"
+                },
+                "reset_password": {
+                    "type": "boolean"
+                }
+            }
+        },
         "handlers.PatchQuestionRequest": {
             "type": "object",
             "properties": {
@@ -4661,6 +4687,9 @@
                 },
                 "refresh_token": {
                     "type": "string"
+                },
+                "reset_password": {
+                    "type": "boolean"
                 },
                 "user_name": {
                     "type": "string"
